[package]
name = "kf_wx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_repr = { version = "0.1.16" }
sha1 = "0.10.5"
hex = "0.4.3"
cbc = "0.1.2"
aes = "0.8.3"
base64 = {version = "0.21.2"}
byteorder = {version = "1.4.3"}
quick-xml = { version = "0.30.0", features = ["serialize"] }
